--- a/index.html
+++ b/index.html
@@ -52,12 +52,14 @@
     <div>
       <!-- separate <div> for credits + styling credits in CSS -->
       <table class="credits">
-        <th colspan="2">Sources and Credits:</th>
+        <th colspan="3">Sources and Credits:</th>
         <tr>
+          <td><img src="images/sq_eating.png" alt="squirrel eating icon" width="128" height="128"></td
           <td>source 1 short title</td>
           <td>source 1 link</td>
         </tr>
         <tr>
+          <td><img src="images/sq_chasing.png" alt="squirrel chasing icon" width="128" height="128"></td
           <td>source 2 short title</td>
           <td>source 2 link</td>
         </tr>
